src/style/globalStyle.scss
:root {
  //Primary
  --hunterGreenDark: #081B0C; // Hunter Green/1
  --hunterGreenMediumDark: #122717; // Hunter Green/2
  --hunterGreen: #24412B; // Hunter Green/3
  --hunterGreenMediumLight: #477652; // Hunter Green/4
  --hunterGreenLight: #92C59E; // Hunter Green/5

  --blueDark: #376CDE; // Blue/1
  --blueMediumDark: #507EDE; // Blue/2
  --blue: #7396DF; // Blue/3
  --blueMediumLight: #9BB7F1; // Blue/4
  --blueLight: #C5D8FF; // Blue/5
  --logoBlue: #5B8EF6;

  // Accent
  --purple: #3B499C; // Purple/1
  --purpleMedium: #505DAA; //Purple/2
  --purpleLight: #C7CEF6; //Purple/4

  --moss: #52662D; // Moss/1
  --mossMedium: #90AA61; // Moss/2
  --mossLight: #CBDFA6; // Moss/3

  --olive: #8B9045; // Olive/1
  --oliveMedium: #CDD565; // Olive/2
  --oliveLight: #F8FEA4; // Olive/3
  --oliveLighter: #ECF389; // Olive/4

  --lavender: #71475D; // Lavendar/1
  --lavenderMedium: #B4849D; // Lavendar/2
  --lavenderLight: #FFDCEE; // Lavendar/3

  --coral: #C56622; // Coral/1
  --coralMedium: #F18C43; // Coral/2
  --coralLight: #FFB682; // Coral/3

  // System
  --red: #BF3D3F; // Red/5
  --pink: #DC3D7D; // Pink

  // Grey scale
  --charcoal: #2E2D2D; // Charcoal/1
  --charcoalLight: #535353; // Charcoal/2
  --grey: #757575; // Charcoal/3
  --mediumGrey: #CDCDCD; // Charcoal/4
  --lightGrey: #EBEBEB; // Charcoal/5
  --white: #FFFFFF; // Light Grey

  --headerHeight: 60px;
  --maxWidth: 1920px;
  --lavenderGradient: linear-gradient(180deg, var( --lavenderLight) 62.5%, #FEDFC9 100%);
}

html,
body {
  font-family: "Arial", "Helvetica Neue", sans-serif;
  font-weight: normal;
  font-size: 16px;
  line-height: 22px;
  height: 100%;
  width: 100%;
  padding: 0;
  margin: 0;
  background: #FAFAFA;
  color: black;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
  outline: none !important;
  -webkit-tap-highlight-color: transparent;
}

h1,
h2,
h3 {
  font-weight: 700 !important;
}

a {
  font-size: 16px;
  font-weight: 400;
  line-height: 16px;
  text-decoration-line: underline;
  color: black;
  cursor: pointer;

  &.small {
    font-size: 13px;
    line-height: 13px;
  }

  &:hover:not(:disabled) {
    color: var(--charcoal);
  }

  &:active {
    opacity: .8;
  }

  &:disabled {
    color: var(--mediumGrey);
  }
}

@keyframes shimmerAnimation {

  0% {
    background-position: -1200px 0;
  }

  100% {
    background-position: 1200px 0;
  }
}

.shimmer {
  animation-duration: 2.2s;
  animation-fill-mode: forwards;
  animation-iteration-count: infinite;
  animation-name: shimmerAnimation;
  animation-timing-function: linear;
  background: #ddd;
  background: linear-gradient(270deg, #EBEBEB 0%, #CDCDCD 100%);
  border-radius: 100px;
  background-size: 1200px 100%;
  color: transparent !important;
  border: transparent !important;
  pointer-events: none;

  :disabled:hover {
    color: transparent;
  }

}

.simpleSelect {
  position: relative;

  select {
    background: transparent;
    border: 1px solid rgba(0, 0, 0, .33);
    border-radius: 4px;
    font-weight: 600;
    padding: 11px;
    padding-right: 24px;
    appearance: none;
    width: 100%;
    color: var(--charcoalLight)
  }

  svg {
    position: absolute;
    right: 10px;
    top: 50%;
    transform: translateY(-50%);
  }
}

/*
  Style that looks like grommet input
  This is used mostly for number input since grommet doesn't have that
*/
.simpleInput {
  border: 1px solid rgba(0, 0, 0, .33);
  border-radius: 4px;
  padding: 11px 6px 11px 11px;
}

.customScrollBar {
  overflow: auto;
  scrollbar-width: thin;
  scrollbar-color: white transparent;

  &::-webkit-scrollbar {
    width: 8px;
  }

  &::-webkit-scrollbar-track {
    background: transparent;
  }

  &::-webkit-scrollbar-thumb {
    background-color: #FFFFFF;
    border-radius: 20px;
    border: 2px solid var(--hunterGreenMediumLight);
  }

  &.grey::-webkit-scrollbar-thumb {
    background-color: var(--grey);
    border: 2px solid transparent;
  }
}

.customCheckbox {

  &.error {

    >label>div>div {
      border-color: var(--red);
    }
  }


  >label {
    outline: none !important;
    border-radius: 5px;

    div>div {
      background-color: #EBEBEB;
      border-color: #EBEBEB;
    }

    &:hover {

      div>div {
        border-color: #5260DD !important;
        background-color: white;

      }
    }

    &[checked="true"] {

      div > div {
        background: #5260DD !important;
        border-color: #5260DD;

        svg {
          stroke: white !important;
          color: white !important;
        }
      }
    }
  }
}

.full-height {
  min-height: 100%;
}

div.calculated-full-height {
  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
  height: calc(var(--vh, 1vh) * 100);
}

.fullscreen .pageWrapper {
  padding-top: 0;
  background: black;
}


.pageWrapper {
  padding-top: var(--headerHeight);
}

